examples/test/testpolicy2006.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2006
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key20: value32
      key31: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value18
          key38: value27
          key46: value35
      podSelector:
        matchLabels:
          key25: value5
          key42: value44
